打包问题，解决部分bug